# watermelon

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test.ipynb
config/feeds/: njodb.properties
downloader/appdata/: db.json.1678874660.368.bak  default.json  users.json  users.old.json
downloader/audio/: Christopher, CHUNG HA (크리스토퍼, 청하) - When I Get Old.info.json  [Lyrics Video] Turtles(거북이) - Airplane(비행기).info.json
downloader/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--3442405467587914479.wt  collection-0-8090285708858656101.wt  collection-14--3442405467587914479.wt  collection-14-8090285708858656101.wt  collection-15--3442405467587914479.wt  collection-15-8090285708858656101.wt  collection-17--3442405467587914479.wt  collection-17-8090285708858656101.wt  collection-2--3442405467587914479.wt  collection-2-8090285708858656101.wt  collection-4--3442405467587914479.wt  collection-4-8090285708858656101.wt  collection-7--3442405467587914479.wt  collection-7-8090285708858656101.wt  index-1--3442405467587914479.wt  index-1-8090285708858656101.wt  index-18--3442405467587914479.wt  index-19-8090285708858656101.wt  index-23--3442405467587914479.wt  index-24-8090285708858656101.wt  index-25--3442405467587914479.wt  index-25-8090285708858656101.wt  index-26--3442405467587914479.wt  index-27-8090285708858656101.wt  index-3--3442405467587914479.wt  index-3-8090285708858656101.wt  index-30-8090285708858656101.wt  (+14 more)
player/: docker-compose.yaml
tests/: test.ipynb
watermelon/: main.py
(+53 files in other folders)
