[tool.poetry]
name = "watermelon"
version = "0.1.0"
description = ""
authors = ["parksm114 <jigeria@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
httpx = "^0.23.3"
youtube-search-python = "^1.6.6"
selenium = "^4.8.2"
bs4 = "^0.0.1"
pandas = "^1.5.3"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
